Refactor authentication and registration processes. Disable public user registration and update related UI components. Change application title and metadata to "AB Financeiro". Add new icons and instructions for generating PNG assets. Update package dependencies including the addition of the sharp library for image processing.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Sistema Financeiro",
-  "short_name": "Financeiro",
+  "name": "AB Financeiro",
+  "short_name": "AB Financeiro",
   "description": "Sistema de controle financeiro pessoal",
   "start_url": "/",
   "display": "standalone",
