--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.40",
     "prisma": "^5.19.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
